# technical-assessment-devops-template

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: lambda-pipeline.yml
aws_lambda_events/: event.json
events/: event.json  event_missing_body.json  event_no_message.json
lambda_app/: app.py
